package main;

public class Controller {
    private int activePlayer;
    private Virologist[] players;
    private Map map;
    private GeneticCode[] codes;

    public Controller() {

    }

    public void startGame() {

    }

    public void checkWinner(Virologist v) {

    }

    private void nextRound() {

    }
}
