package main;

import tiles.Tile;

public class Map {
    private Tile[] tiles;

    public Map() {

    }

    public void createMap() {

    }
}
