package main;

public enum ResourceType {
    Aminoacid,
    Nucleotid
}
