@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
class Resource implements Collectable {
    -amount: int
    +collect(inv: Inventory)
    {static} getResourceByType(resources: Resource[], type: ResourceType): Resource
}

enum ResourceType {
    AminoAcid
    Nucleotide
}
Resource *-- "-type, 1" ResourceType

abstract class Agent implements Effect {
    #roundsLeft: int
    +use(from: Virologist, to: Virologist)
    {static} {abstract} +create(): Agent
    /'             Effekt interface            '/
        +onTurnImpact(to: Virologist): void
        +endTurnImpact(to: Virologist): void
        +counterImpact(agent: Agent, from: Virologist, to: Virologist)
        +allowStealing(): boolean
        +decrement(): void
}

class AmnesiaVirus extends Agent{
    {static} +create(): Agent
    +onTurnImpact(to: Virologist)
}

class StunVirus extends Agent{
    {static} +create(): Agent
    +onTurnImpact(to: Virologist)
    +allowStealing(): boolean
}
class VitusDanceVirus extends Agent{
    {static} +create(): Agent
    +onTurnImpact(to: Virologist)
}
class Vaccine extends Agent{
    {static} +create(): Agent
    +counterImpact(agent: Agent, from: Virologist, to: Virologist)
}

class Virologist {
    -actionsLeft: int
    +addEffect(effect: Effect)
    +removeEffect(effect:Effect)
    'az alap useCase-ek:
    -moveTo(newTile: Tile)
    -pickUp()
    -craft(code: GeneticCode)
    -useAgent(agent: Agent, v: Virologist)
    -steal(Virologist v)
    -pass()
    /' Zsombi adta hozzá '/
    -tick()          /'crafted agentek idejét eggyel csökkenti'/
    +myTurn()        /' A játékos mikor sorra kerül ezek történnek '/
}

class Inventory {
    -maxResourceAmount: int
    +addGeneticCode(gc: GeneticCode)
    +addEquipment(eq: Equipment)
    +addCraftedAgent(agent: Agent)
    +addResource(res: Resource)
    +removeGeneticCode(gc: GeneticCode)
    +removeEquipment(eq: Equipment): boolean
    +removeCraftedAgent(agent: Agent)
    +removeResource(res: Resource)
    +steal(from: Inventory, what: Equipment)
}
interface Effect {
    +onTurnImpact(to: Virologist)
    +endTurnImpact(to: Virologist)
    +counterImpact(agent: Agent, from: Virologist, to: Virologist)
    +allowStealing(): boolean
    +decrement(): void
}
class GeneticCode implements Collectable {
    +collect(inv: Inventory) /'Collectable'/
    +isCraftable(resources: Resource[]): boolean
    +craft(inv: Inventory)
}

interface Collectable {
    +collect(inv: Inventory)
}

Virologist "-virologist, 1" -- "-inventory, 1" Inventory
Virologist --> "-activeEffects, 0..*" Effect

Inventory *-- "-learntCodes, 0..*" GeneticCode
Inventory *-- "-pickedUpEquipments, 0..*" Equipment
Inventory *-- "-craftedAgents, 0..*" Agent
Inventory *-- "-resources, N" Resource

GeneticCode *-- "-price ,N" Resource
GeneticCode *-- "-agent, 1" Agent

Virologist "-players 0..*" - "-activeTile, 1" Tile

abstract class Equipment implements Effect, Collectable {
    {abstract} +collect(inv: Inventory)
    /'             Effekt interface            '/
            +onTurnImpact(to: Virologist): void
            +endTurnImpact(to: Virologist): void
            +counterImpact(agent: Agent, from: Virologist, to: Virologist)
            +allowStealing(): boolean
            +decrement(): void
}
class ProtectiveCloak extends Equipment {
    +collect(inv: Inventory) /'Collectable'/
    +counterImpact(agent: Agent, from: Virologist, to: Virologist) /'Equipment'/
}

class Bag extends Equipment{
    +collect(inv: Inventory): void /'Collectable'/
    +onTurnImpact(to: Virologist): void /'Equipment'/
    +endTurnImpact(to: Virologist): void /'Equipment'/
}
class Glove extends Equipment {
    +collect(inv: Inventory): void /'Collectable'/
    +counterImpact(agent: Agent, from: Virologist, to: Virologist): void /'Equipment'/
}

abstract class Tile {
    #id: int
    #name: string
    +getPlayersToStealFrom(): Virologist[]
    {abstract} +collectItem(inv: Inventory)
    {abstract} +getCollectableItem(): Collectable
    +addVirologist(player: Virologist)
    +removeVirologist(player: Virologist)
}
class Laboratory extends Tile {
    +collectItem(inv: Inventory)
    +getCollectableItem(): Collectable
}

class Safehouse extends Tile {
    +collectItem(inv: Inventory)
    +getCollectableItem(): Collectable
}
class Warehouse extends Tile {
    +collectItem(inv: Inventory)
    +getCollectableItem(): Collectable
}
class EmptyTile extends Tile {
    +collectItem(inv: Inventory)
    +getCollectableItem(): Collectable
}

class Map {
    +createMap()
}
Laboratory *-- "-code, 1" GeneticCode
Safehouse *-- "-equipment, 1" Equipment
Warehouse *-- "-collectable, 1" Resource

Map  *-- "-tiles, L" Tile
Tile <-- "-neighbours, 1..K" Tile


class Controller {
    -activePlayer: int
    +startGame(): void
    -nextRound(): void
}
Controller *-- "-map, 1" Map
Controller *-- "-players, 2..M" Virologist
Controller *-- "-codes, J" GeneticCode

@enduml